--- a/app/Resources/views/affectationpiste/index.html.twig
+++ b/app/Resources/views/affectationpiste/index.html.twig
@@ -28,6 +28,7 @@
                 <tr>
                     <th>Piste</th>
                     <th>Controlleurs</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -37,6 +38,7 @@
                 <tr>
                     <th>Piste</th>
                     <th>Controlleurs</th>
+                    <th>Actions</th>
                 </tr>
             </tfoot>
         </table>
