--- a/app/Resources/views/caisse/index.html.twig
+++ b/app/Resources/views/caisse/index.html.twig
@@ -19,7 +19,7 @@
 
 {% block actions %}
     <label class="btn btn-outline-secondary"><a href="{{ path('caisse_export') }}">EXPORTER</a></label>
-    {% if is_granted('ROLE_SUPERVISEUR') %} 
+    {% if is_granted('ROLE_CAISSIER_PRINCIPAL') %} 
         <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_caisse_new') }}">CREER</a></label>
     {% endif %}
 {% endblock %}
