--- a/app/Resources/views/centre/index.html.twig
+++ b/app/Resources/views/centre/index.html.twig
@@ -13,7 +13,7 @@
 {% block menu_gestion_actif %}active{% endblock %}
 {% block pagetitle -%}GESTION DU CENTRE{% endblock %}
 {% block actions %}
-    {% if is_granted('ROLE_SUPERVISEUR') %}
+    {% if is_granted('ROLE_CAISSIER_PRINCIPAL') %}
         {% if boutton == 0 %} 
             <label class="btn btn-outline-secondary"><a href="{{ path('admin_gestion_centre_new') }}">CREER</a></label>
         {% else %}
