Bouton rechercher pour lancer la recherche

--- a/app/Resources/views/vehicule/index.html.twig
+++ b/app/Resources/views/vehicule/index.html.twig
@@ -74,6 +74,8 @@
         </tfoot>
         </thead>
     </table>
+    {% else %}
+        Saisir au mois 4 charactères pour lancer la recherche!
     {% endif %}
 </div>
 {% endblock %}
