--- a/app/Resources/views/vehicule/index.html.twig
+++ b/app/Resources/views/vehicule/index.html.twig
@@ -33,47 +33,51 @@
         </form>
     </label>
     {% if vehicules is not null%}
-    <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
-        <thead>
-            <tr>
-                <th>Immatriculation</th>
-                <th>Chassis</th>
-                <th>Modèle</th>
-                <th>Propriétaire</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for vehicule in vehicules %}
-                <tr>
-                    <td>{{ vehicule.immatriculation }} </td>
-                    <td>{{ vehicule.chassis }} </td>
-                    <td>{{ vehicule.modele.libelle }} </td>
-                    <td>{{ vehicule.modele.marque.libelle }} </td>
-                    <td>
-                        <a title='Détail' class='btn btn-success' href="{{ path('vehicule_show', {'id':vehicule.id}) }}" ><i class='fa fa-search-plus'></i></a>
-                        <a title='Modifier' class='btn btn-info' href="{{ path('vehicule_edit', {'id':vehicule.id}) }}" ><i class='fa fa-edit' ></i></a>
-                        <a title='Supprimer' class='btn btn-danger' href="{{ path('vehicule_delete_a', {'id':vehicule.id}) }}"  onclick='return confirm("Confirmer la suppression?")'><i class='fa fa-trash-o'> </i></a><br/><br/>
-                        <a title='Aiguiller normal' class='btn btn-warning' href="{{ path('aiguiller', {'id':vehicule.id, 'type':0}) }}" ><i class='fa fa-compass'> </i></a>
-                        <a title='Aiguiller spécial' class='btn btn-djib' href="{{ path('aiguiller', {'id':vehicule.id, 'type':1}) }}" ><i class='fa fa-star-o'> </i></a>
-                        {% if is_granted('ROLE_CAISSIER_PRINCIPAL') %}
-                            <a title='Contre visite' class='btn btn-warning' href="{{ path('contrevisite', {'id':vehicule.id}) }}"  ><i class='fa fa-check'> </i></a>
-                        {% endif %}
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-        <tfoot>
-            <tr>
-                <th>Immatriculation</th>
-                <th>Chassis</th>
-                <th>Modèle</th>
-                <th>Propriétaire</th>
-                <th>Actions</th>
-            </tr>
-        </tfoot>
-        </thead>
-    </table>
+        {% if vehicules is empty %}
+            Aucun véhicule trouvé. Merci de vérifier l'immatriculation ou procéder à l'enregistrement!
+        {% else %}
+            <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
+                <thead>
+                    <tr>
+                        <th>Immatriculation</th>
+                        <th>Chassis</th>
+                        <th>Modèle</th>
+                        <th>Propriétaire</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for vehicule in vehicules %}
+                        <tr>
+                            <td>{{ vehicule.immatriculation }} </td>
+                            <td>{{ vehicule.chassis }} </td>
+                            <td>{{ vehicule.modele.marque.libelle }} {{ vehicule.modele.libelle }}</td>
+                            <td>{{ vehicule.proprietaire.getNomComplet }} </td>
+                            <td>
+                                <a title='Détail' class='btn btn-success' href="{{ path('vehicule_show', {'id':vehicule.id}) }}" ><i class='fa fa-search-plus'></i></a>
+                                <a title='Modifier' class='btn btn-info' href="{{ path('vehicule_edit', {'id':vehicule.id}) }}" ><i class='fa fa-edit' ></i></a>
+                                <a title='Supprimer' class='btn btn-danger' href="{{ path('vehicule_delete_a', {'id':vehicule.id}) }}"  onclick='return confirm("Confirmer la suppression?")'><i class='fa fa-trash-o'> </i></a><br/><br/>
+                                <a title='Aiguiller normal' class='btn btn-warning' href="{{ path('aiguiller', {'id':vehicule.id, 'type':0}) }}" ><i class='fa fa-compass'> </i></a>
+                                <a title='Aiguiller spécial' class='btn btn-djib' href="{{ path('aiguiller', {'id':vehicule.id, 'type':1}) }}" ><i class='fa fa-star-o'> </i></a>
+                                {% if is_granted('ROLE_CAISSIER_PRINCIPAL') %}
+                                    <a title='Contre visite' class='btn btn-warning' href="{{ path('contrevisite', {'id':vehicule.id}) }}"  ><i class='fa fa-check'> </i></a>
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th>Immatriculation</th>
+                        <th>Chassis</th>
+                        <th>Modèle</th>
+                        <th>Propriétaire</th>
+                        <th>Actions</th>
+                    </tr>
+                </tfoot>
+                </thead>
+            </table>
+        {% endif %}
     {% else %}
         Saisir au mois 4 charactères pour lancer la recherche!
     {% endif %}
