--- a/app/Resources/views/vehicule/edit.html.twig
+++ b/app/Resources/views/vehicule/edit.html.twig
@@ -23,6 +23,7 @@
 {% endblock %}
 {% block body %}
     {{ form_start(edit_form) }}
+        <input type="submit" value="Modifier" />
         {{ form_widget(edit_form) }}
         <input type="submit" value="Modifier" />
     {{ form_end(edit_form) }}
