--- a/app/Resources/views/visite/show.delivrance.html.twig
+++ b/app/Resources/views/visite/show.delivrance.html.twig
@@ -98,14 +98,14 @@
         <div style="margin-top:1.8cm;margin-left:1.4cm"><div style="display: inline-block;width: 7.6cm">{{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</div><span>{{ visite.date|date('d-m-y') }}</span></div>
         <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.9cm">{{ visite.vehicule.proprietaire.adresse }}</div><span>{{ visite.dateValidite|date('d-m-y') }}</span></div>
         <div style="margin-top:6mm;margin-left:2.5cm"><div style="display: inline-block;width: 7.1cm">{{ visite.vehicule.immatriculation }}</div><span>{{ visite.vehicule.dateMiseCirculation|date('d-m-y') }}</span></div>
-        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.typeChassis }}</div><span>{{ visite.vehicule.modele.marque.libelle }} {{ visite.vehicule.modele.libelle }}</span></div>
+        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.chassis }}</div><span>{{ visite.vehicule.modele.marque.libelle }} {{ visite.vehicule.modele.libelle }}</span></div>
     </div>
    <div style="width:11.5cm; height: 7cm;overflow: hidden;">
         <div style="margin-top:2mm;margin-left: 8.6cm">{{ visite.numeroCertificat }}</div>
         <div style="margin-top:1.8cm;margin-left:1.4cm"><div style="display: inline-block;width: 7.6cm">{{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</div><span>{{ visite.date|date('d-m-y') }}</span></div>
         <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.9cm">{{ visite.vehicule.proprietaire.adresse }}</div><span>{{ visite.dateValidite|date('d-m-y') }}</span></div>
         <div style="margin-top:6mm;margin-left:2.5cm"><div style="display: inline-block;width: 7.1cm">{{ visite.vehicule.immatriculation }}</div><span>{{ visite.vehicule.dateMiseCirculation|date('d-m-y') }}</span></div>
-        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.typeChassis }}</div><span>{{ visite.vehicule.modele.marque.libelle }} {{ visite.vehicule.modele.libelle }}</span></div>
+        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.chassis }}</div><span>{{ visite.vehicule.modele.marque.libelle }} {{ visite.vehicule.modele.libelle }}</span></div>
     </div>
     <div style="width:11.5cm; height: 7cm;overflow: hidden;">
         <div style="margin-top:1.2cm;margin-left:5.6cm">{{ visite.numeroCertificat }}</div>
@@ -121,14 +121,14 @@
         <div style="margin-top:1.8cm;margin-left:1.4cm"><div style="display: inline-block;width: 7.6cm">{{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</div><span>{{ visite.date|date('d-m-y') }}</span></div>
         <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.9cm">{{ visite.vehicule.proprietaire.adresse }}</div><span>{{ visite.dateValidite|date('d-m-y') }}</span></div>
         <div style="margin-top:6mm;margin-left:2.5cm"><div style="display: inline-block;width: 7.1cm">{{ visite.vehicule.immatriculation }}</div><span>{{ visite.vehicule.dateMiseCirculation|date('d-m-y') }}</span></div>
-        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.typeChassis }}</div><span>{{ visite.vehicule.modele.marque.libelle }} {{ visite.vehicule.modele.libelle }}</span></div>
+        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.chassis }}</div><span>{{ visite.vehicule.modele.marque.libelle }} {{ visite.vehicule.modele.libelle }}</span></div>
     </div>
    <div style="width:11.5cm; height: 7cm;overflow: hidden;">
         <div style="margin-top:2mm;margin-left: 8.6cm">{{ visite.numeroCertificat }}</div>
         <div style="margin-top:1.8cm;margin-left:1.4cm"><div style="display: inline-block;width: 7.6cm">{{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</div><span>{{ visite.date|date('d-m-y') }}</span></div>
         <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.9cm">{{ visite.vehicule.proprietaire.adresse }}</div><span>{{ visite.dateValidite|date('d-m-y') }}</span></div>
         <div style="margin-top:6mm;margin-left:2.5cm"><div style="display: inline-block;width: 7.1cm">{{ visite.vehicule.immatriculation }}</div><span>{{ visite.vehicule.dateMiseCirculation|date('d-m-y') }}</span></div>
-        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.typeChassis }}</div><span>{{ visite.vehicule.modele.marque.libelle }} {{ visite.vehicule.modele.libelle }}</span></div>
+        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.chassis }}</div><span>{{ visite.vehicule.modele.marque.libelle }} {{ visite.vehicule.modele.libelle }}</span></div>
     </div>
     <div style="width:11.5cm; height: 7cm;overflow: hidden;">
         <div style="margin-top:1.2cm;margin-left:5.6cm">{{ visite.numeroCertificat }}</div>
