Nom et prenom au lieu du login sur quittance rapport et délivrance. Rajout de la mention PENALITE : OUI/NON au niveau de la quittance

--- a/app/Resources/views/quittance/show.html.twig
+++ b/app/Resources/views/quittance/show.html.twig
@@ -66,7 +66,10 @@
                 <td>{{ quittance.tva|number_format(0, ',', ' ') }}</td>
                 <td>{{ quittance.timbre|number_format(0, ',', ' ')}}</td>
                 <td>{{ (quittance.montantVisite+quittance.tva+quittance.timbre)|round(0, 'ceil')|number_format(0, ',', ' ')  }}</td>
-                <td>{{ quittance.creePar }}</td>
+                <td>{% if quittance.caissier is not null %}{{ quittance.caissier.nomComplet }} {% else %}   {{ quittance.creePar }} {% endif %}</td>
+            </tr>
+            <tr>
+                <td style="background: #000;color:#fff;padding:10px"><span >PENALITE : {% if quittance.penalite > 0 %}OUI{% else %}NON{%endif%}</span></td>
             </tr>
      </tbody>
 </table>
@@ -112,7 +115,7 @@
                     <td>{{ quittance.tva|number_format(0, ',', ' ') }}</td>
                     <td>{{ quittance.timbre|number_format(0, ',', ' ')}}</td>
                     <td>{{ (quittance.montantVisite+quittance.tva+quittance.timbre)|round(0, 'ceil')|number_format(0, ',', ' ')  }}</td>
-                    <td>{{ quittance.creePar }}</td>
+                    <td>{% if quittance.caissier is not null %}{{ quittance.caissier.nomComplet }} {% else %}   {{ quittance.creePar }} {% endif %}</td>
                 </tr>
          </tbody>
     </table>
