--- a/app/Resources/views/quittance/show.principal.html.twig
+++ b/app/Resources/views/quittance/show.principal.html.twig
@@ -65,7 +65,7 @@
                 <td>{{ quittance.tva|number_format(0, ',', ' ') }}</td>
                 <td>{{ quittance.timbre|number_format(0, ',', ' ')}}</td>
                 <td>{{ (quittance.montantVisite+quittance.tva+quittance.timbre)|round(0, 'ceil')|number_format(0, ',', ' ')  }}</td>
-                <td>{{ quittance.creePar }}</td>
+                <td>{% if quittance.caissier is not null %}{{ quittance.caissier.nomComplet }} {% else %}   {{ quittance.creePar }} {% endif %}</td>
             </tr>
      </tbody>
 </table>
@@ -111,7 +111,7 @@
                     <td>{{ quittance.tva|number_format(0, ',', ' ') }}</td>
                     <td>{{ quittance.timbre|number_format(0, ',', ' ')}}</td>
                     <td>{{ (quittance.montantVisite+quittance.tva+quittance.timbre)|round(0, 'ceil')|number_format(0, ',', ' ')  }}</td>
-                    <td>{{ quittance.creePar }}</td>
+                    <td>{% if quittance.caissier is not null %}{{ quittance.caissier.nomComplet }} {% else %}   {{ quittance.creePar }} {% endif %}</td>
                 </tr>
          </tbody>
     </table>
