--- a/app/Resources/views/visite/show.delivrance.html.twig
+++ b/app/Resources/views/visite/show.delivrance.html.twig
@@ -80,7 +80,7 @@
      </tbody>
 </table>
 <div style='margin-top:15px'>
-     Controle effctué par {{ visite.chaine.piste.getAffectationActive.agent.nomComplet }}
+     Controle effctué par {{ visite.controlleur }}
 </div>
 <div style='margin-top:25px'>
     <span>RESULTAT DU CONTROLE VALABLE POUR LA CIRCULATION DU VEHICULE PENDANT {{ visite.vehicule.typeVehicule.delai }} JOURS SANS CERTIFICAT DE VISITE TECHNIQUE</span>
@@ -179,7 +179,7 @@
                  </tbody>
             </table>
             <div style='margin-top:15px'>
-                 Controle effctué par {{ visite.chaine.piste.getAffectationActive.agent.nomComplet }}
+                 Controle effctué par {{ visite.controlleur }}
             </div>
             <div style='margin-top:25px'>
                 <span>RESULTAT DU CONTROLE VALABLE POUR LA CIRCULATION DU VEHICULE PENDANT {{ visite.vehicule.typeVehicule.delai }} JOURS SANS CERTIFICAT DE VISITE TECHNIQUE</span>
