--- a/app/Resources/views/visite/show.html.twig
+++ b/app/Resources/views/visite/show.html.twig
@@ -19,6 +19,7 @@
         <label class="btn btn-outline-secondary"><a href="{{ path('visite_controle') }}">LISTE DES CONTROLES</a></label>
         <label class="btn btn-outline-secondary"><a  href="#" onclick="imprimer()" title="Imprimer le rapport">RAPPORT</a></label>
         <label class="btn btn-outline-secondary"><a  href="{{ path('contrevisitevisuelle', { 'id': visite.vehicule.id }) }}" title="CONTRE-VISITE VISUELLE">Contre-visite visuelle</a></label>
+        <label class="btn btn-outline-secondary"><a  href="{{ path('contrevisite', { 'id': visite.vehicule.id }) }}" title="CONTRE-VISITE COMPLETE">Contre-visite complète</a></label>
     {% endif %}
 {% endblock %}
 {% block body %}
